# snake-game

./: CMakeLists.txt  README.md  help.txt  main.cpp
draft/ncurses/: nCursesTest.cpp  test
include/: control.hpp  elements.hpp  gameHandler.hpp  matrix.hpp
include/graphics/: nCursesTest.hpp
include/window/: window.hpp
src/: control.cpp  elements.cpp  gameHandler.cpp  main.cpp  matrix.cpp
src/graphics/: nCursesTest.cpp
src/window/: window.cpp
